2012-09-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54463
	* trans-intrinsic.c (gfc_conv_intrinsic_funcall): Fix matmul
	call to BLAS if the default-kind has been promoted.

2012-09-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54462
	* symbol.c (gfc_undo_symbols): Avoid NULL pointer dereference.

2012-09-04  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54435
	PR fortran/54443
	* match.c (gfc_match_select_type): Make sure to only access CLASS_DATA
	for BT_CLASS.

2012-09-03  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54467
	* class.c (gfc_find_derived_vtab): Fix disabling of _final
	by continuing to generate normal type-bound procedures.

2012-09-03  Tobias Burnus  <burnus@net-b.de>

	* class.c (gfc_find_derived_vtab): Disable ABI-breaking
	generation of the "_final" subroutine for now.

2012-09-03  Tobias Burnus  <burnus@net-b.de>

	* class.c (finalize_component): Fixes to the comment.

2012-09-03  Alessandro Fanfarillo  <fanfarillo.gcc@gmail.com>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/37336
	* gfortran.h (symbol_attribute): Add artificial.
	* module.c (mio_symbol_attribute): Handle attr.artificial
	* class.c (gfc_build_class_symbol): Defer creation of the vtab
	if the DT has finalizers, mark generated symbols as
	attr.artificial.
	(has_finalizer_component, finalize_component,
	finalization_scalarizer, generate_finalization_wrapper):
	New static functions.
	(gfc_find_derived_vtab): Add _final component and call
	generate_finalization_wrapper.
	* dump-parse-tree.c (show_f2k_derived): Use resolved
	proc_tree->n.sym rather than unresolved proc_sym.
	(show_attr): Handle attr.artificial.
	* resolve.c (gfc_resolve_finalizers): Ensure that the vtab exists.
	(resolve_fl_derived): Resolve finalizers before
	generating the vtab.
	(resolve_symbol): Also allow assumed-rank arrays with CONTIGUOUS;
	skip artificial symbols.
	(resolve_fl_derived0): Skip artificial symbols.

2012-09-02  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54426